# actix-dioxus-starter-template

./: .gitignore  Cargo.toml  Shuttle.toml  api.http
api/lib/: Cargo.toml
api/lib/src/: error.rs  health.rs  lib.rs  response.rs  template.rs  todo.rs  todos.rs  user.rs  users.rs
api/lib/src/postgres_session_store/: mod.rs
api/lib/src/todo_repository/: mod.rs  postgres_todo_repository.rs
api/lib/src/user_repository/: mod.rs  postgres_user_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
backend/api/: Cargo.toml
backend/api/src/: lib.rs
backend/api/src/repository/: mod.rs  session.rs  todo.rs  user.rs
backend/api/src/routes/: health.rs  mod.rs  todo.rs  user.rs
backend/api/src/tests/routes/: health.rs  mod.rs  todo.rs  user.rs
backend/api/src/util/: body.rs  error.rs  mod.rs  response.rs  session_store.rs
backend/config/: Cargo.toml
backend/config/src/: main.rs
migrations/: 20230917123045_todo.down.sql  20230917123045_todo.up.sql  20230919065153_add_user.down.sql  20230919065153_add_user.up.sql  20230919071652_user_to_todo.down.sql  20230919071652_user_to_todo.up.sql  20230919105453_adjust_session_token_size.down.sql  20230919105453_adjust_session_token_size.up.sql  20230919205141_adjust_index_of_todo.down.sql  20230919205141_adjust_index_of_todo.up.sql  20230922213854_introduce_some_user_indices.down.sql  20230922213854_introduce_some_user_indices.up.sql  20230923083022_remove_salt_attr_from_users.down.sql  20230923083022_remove_salt_attr_from_users.up.sql  20230925095850_add_todo_owner.down.sql  20230925095850_add_todo_owner.up.sql  20230926072412_add_missing_session_fields.down.sql  20230926072412_add_missing_session_fields.up.sql  20230926074626_sessions_to_users_foreign_key.down.sql  20230926074626_sessions_to_users_foreign_key.up.sql  20230927185006_cool_session_store.up.sql  20231001183837_session_without_ttl_yet.up.sql  20231001195503_foreign_key_owner_todo.up.sql
rest_client_files/: health.http  todos.http  users.http
shared/: Cargo.toml
shared/src/: models.rs
