[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.3.1"
actix-session = "0.8.0"
actix-identity = "0.6.0"
# database
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
# tracing
tracing = "0.1"
# serde
serde = "1.0"
serde_json = "1.0"
# async
async-trait = "0.1"
# shared
shared = { path = "../../shared", features = ["backend"] }

anyhow = "1.0.44"

argon2 = "0.5.2"

derive_more = "0.99.11"
