[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.26.0"
shuttle-runtime = "0.26.0"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.26.0", features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1.27"
api-lib = { path = "../lib" }
