[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = "0.8.0"
actix-identity = "0.6.0"

tokio = "1.26.0"

shuttle-runtime = "0.26.0"
shuttle-actix-web = "0.26.0"
shuttle-shared-db = { version = "0.26.0", features = ["postgres-rustls"] }
shuttle-static-folder = "0.26.0"

sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1.27"
api-lib = { path = "../lib" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
